--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.2.0",
-    "@portone/browser-sdk": "^0.0.23",
+    "@team-mintc/portone-v2": "^0.7.9",
     "@types/webrtc": "^0.0.46",
     "axios": "^1.10.0",
     "dotenv": "^17.2.0",
