--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/webrtc": "^0.0.46",
     "axios": "^1.10.0",
     "dotenv": "^17.2.0",
+    "lucide-react": "^0.525.0",
     "next": "^15.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
